--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-
+<p>This is my data types assignment</p>
+<p>Being test 2</p>
 </body>
 </html>
