--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 <p>This is my data types assignment</p>
 <p>Being test 2</p>
 <p>now initializing</p>
+<form>
+    <input type="email" name="Email" id="email">
+    <input type="email" name="password" id="password">
+</form>
+
 </body>
 </html>
