--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <p>Being test 2</p>
 <p>now initializing</p>
 <form>
+    <label>Email</label>
     <input type="email" name="Email" id="email">
+
+    <label>Password</label>
     <input type="email" name="password" id="password">
 </form>
-
+<button type="Submit">LOGIN</button>
 </body>
 </html>
