--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <label>Password</label>
     <input type="email" name="password" id="password">
 </form>
-<button type="Submit">LOGIN</button>
+<button type="Submit" onclick="loginFunction()" >LOGIN</button>
+
+<!-- <script src="login.js"></script> -->
 </body>
 </html>
