description of what the application does

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <body>
 
 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<p>This is my data types assignment</p>
-<p>Being test 2</p>
+<p>A web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
+
 <p>now initializing</p>
 <form>
     <label>Email</label>
