--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Will fix This</title>
+<title>Akan Web Application</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Introduction</h1>
 <p>A web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
 
 <p>now initializing</p>
