--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Akan Web Application</title>
+<title>Akan Web</title>
 </head>
 <body>
 
@@ -10,13 +10,13 @@
 
 <p>now initializing</p>
 <form>
-    <label>Email</label>
-    <input type="email" name="Email" id="email">
+    <label>Date</label>
+    <input type="date" name="Date" id="date">
 
-    <label>Password</label>
-    <input type="email" name="password" id="password">
+    <label>Gender</label>
+    <input type="date" name="gender" id="gender">
 </form>
-<button type="Submit" onclick="loginFunction()" >LOGIN</button>
+<button type="Submit" onclick="loginFunction()" >SELECT</button>
 
 <!-- <script src="login.js"></script> -->
 </body>
