--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input type="date" name="Date" id="date">
 
     <label>Gender</label>
-    <input type="date" name="gender" id="gender">
+    <input type="gender" name="gender" id="gender">
 </form>
 <button type="Submit" onclick="loginFunction()" >SELECT</button>
 
