--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <label>Gender</label>
     <input type="gender" name="gender" id="gender">
+
+    <label>Name</label>
+    <input type="name" name="name" id="name">
 </form>
 <button type="Submit" onclick="loginFunction()" >SELECT</button>
 
