--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <title>Akan Web</title>
+    <title>Akan Calculator</title>
   </head>
   <body>
     <h1>Introduction</h1>
