--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Akan Calculator</title>
   </head>
   <body>
-    <h1>Introduction</h1>
+    <h1>About Akan Calculator</h1>
     <p>
       A web application that takes a user's birthday and calculates the day of
       the week they were born and then depending on their gender outputs their
