--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       Ghana, children are given their first name as a 'day name' which
       corresponds to the day in the week they were born.
     </p>
+    <h2>Ghanian Naming Ceremony</h2>
+    <img src=""
 
     <p>now initializing</p>
     <form>
