--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       corresponds to the day in the week they were born.
     </p>
     <h2>Ghanian Naming Ceremony</h2>
-    <img src=""
+    <img src="images/Ghanian Culture.PNG"
 
-    <p>now initializing</p>
+    <p>Initializing</p>
     <form>
       <label>Date</label>
       <input type="date" name="Date" id="date" />
