--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+      <link rel="stylesheet" href="mystyle.css">
     <title>Akan Calculator</title>
   </head>
   <body>
@@ -19,10 +20,9 @@
       corresponds to the day in the week they were born.
     </p>
     <h2>Ghanian Naming Ceremony</h2>
-    <img src="images/Ghanian Culture.PNG">
+    <img src="images/Ghanian Culture.PNG" />
 
-    <p>
-      Initializing</p>
+    <p>Initializing</p>
     <form>
       <label>Date</label>
       <input type="date" name="Date" id="date" />
