--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-         <link rel="stylesheet" href="mystyle.css">
+    <link href="styles.css" rel="stylesheet">
     <title>Akan Calculator</title>
   </head>
   <body>
