--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="styles.css" rel="stylesheet">
-    <title>Akan Calculator</title>
+    <link href="styles.css" rel="stylesheet" />
+    <title><center>Akan Calculator</center></title>
   </head>
   <body>
     <h1>About Akan Calculator</h1>
