--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="styles.css" rel="stylesheet" />
-    <title><center>Akan Calculator</center></title>
+    <title>Akan Calculator</title>
   </head>
   <body>
     <h1>About Akan Calculator</h1>
