--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <link href="styles.css" rel="stylesheet" />
     <title>Akan Calculator</title>
   </head>
@@ -11,9 +18,12 @@
     <p>
       A web application that takes a user's birthday and calculates the day of
       the week they were born and then depending on their gender outputs their
-      Akan Name. Akan names are derived from Ghanian culture. Frequently in
-      Ghana, children are given their first name as a 'day name' which
-      corresponds to the day in the week they were born.
+      Akan Name.
+    </p>
+    <p>Akan names are derived from Ghanian culture.</p>
+    <p>
+      Frequently in Ghana, children are given their first name as a 'day name'
+      which corresponds to the day in the week they were born.
     </p>
     <h2>Ghanian Naming Ceremony</h2>
     <img src="images/Ghanian Culture.PNG" />
