--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>Ghanian Naming Ceremony</h2>
     <img src="images/Ghanian Culture.PNG" />
 
-    <p>Initializing</p>
+    <p>Click the submit button to see what Akan name would be</p>
     <form>
       <label>Date</label>
       <input type="date" name="Date" id="date" />
@@ -39,7 +39,7 @@
       <label>Name</label>
       <input type="name" name="name" id="name" />
     </form>
-    <button type="Submit" onclick="loginFunction()">SELECT</button>
+    <button type="Submit" onclick="loginFunction()">SUBMIT</button>
 
     <!-- <script src="login.js"></script> -->
   </body>
