--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
     <link href="styles.css" rel="stylesheet" />
     <title>Akan Calculator</title>
   </head>
@@ -39,7 +32,9 @@
       <label>Name</label>
       <input type="name" name="name" id="name" />
     </form>
-    <button type="Submit" onclick="loginFunction()">SUBMIT</button>
+    <center>
+      <button type="Submit" onclick="loginFunction()">SUBMIT</button>
+    </center>
 
     <!-- <script src="login.js"></script> -->
   </body>
