--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Ghanian Naming Ceremony</h2>
     <img src="images/Ghanian Culture.PNG" />
 
-    <p>Click the submit button to see what Akan name would be</p>
+    <p>Enter Birthdate, select gender and click submit button to see what Akan name would be</p>
     <form>
       <label>Date</label>
       <input type="date" name="Date" id="date" />
