--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
     </form>
     <h2 style="visibility: hidden" id="results">Akan name generator</h2>
   </div>
-<script src="javascript/scripts.js"></script>
+  <!-- <script src="login.js"></script> -->
 </body>
 </html>
