--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Akan Name Generator</title>
   <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <h1>
-      <center>About Akan Calculator</center>
-    </h1>
-    <p>
-      A web application that takes a user's birthday and calculates the day of
-      the week they were born and then depending on their gender outputs their
-      Akan Name.
-    </p>
-    <p>Akan names are derived from Ghanian culture.</p>
-    <p>
-      Frequently in Ghana, children are given their first name as a 'day name'
-      which corresponds to the day in the week they were born.
-    </p>
-    <h2>Ghanian Naming Ceremony</h2>
-    <img src="images/Ghanian Culture.PNG" />
+</head>
+<body  >
+  <h1>
+    <center>About Akan Calculator</center>
+  </h1>
+  <p>
+    A web application that takes a user's birthday and calculates the day of
+    the week they were born and then depending on their gender outputs their
+    Akan Name.
+  </p>
+  <p>Akan names are derived from Ghanian culture.</p>
+  <p>
+    Frequently in Ghana, children are given their first name as a 'day name'
+    which corresponds to the day in the week they were born.
+  </p>
+  <h2>Ghanian Naming Ceremony</h2>
+  <img src="images/Ghanian Culture.PNG" />
 
-    <p>Enter Birthdate, select gender and click submit button to see what Akan name would be</p>
-    <form>
+  <p>Enter Birthdate, Year, month and day, select gender and click submit button to see what Akan name would be</p>
   <div class="form">
     <form name="myForm" onsubmit="validate();return false">
       <div class="title">Akan Name Generator</div>
@@ -64,6 +63,6 @@
     </form>
     <h2 style="visibility: hidden" id="results">Akan name generator</h2>
   </div>
-  <!-- <script src="login.js"></script> -->
+<script src="login.js"></script>
 </body>
 </html>
