--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h2>Ghanian Naming Ceremony</h2>
   <img src="images/Ghanian Culture.PNG" />
 
-  <p>Enter Birthdate, Year, month and day, select gender and click submit button to see what Akan name would be</p>
+  <p>Enter Year of birth, month and day, then select gender and click submit button to see what Akan name would be</p>
   <div class="form">
     <form name="myForm" onsubmit="validate();return false">
       <div class="title">Akan Name Generator</div>
